may nilagay lang na image sa user management

--- a/VSUQSM/src/app/features/admin-layout/a-user-management/a-user-management.component.html
+++ b/VSUQSM/src/app/features/admin-layout/a-user-management/a-user-management.component.html
@@ -2,6 +2,13 @@
     <header>
       <h1 class="text-4xl font-bold text-neutral-800">User Management</h1>
     </header>
+    <img
+    loading="lazy"
+    src="https://cdn.builder.io/api/v1/image/assets/TEMP/3ba9cd9dc6b71854e4bc5a14ca4f1f13316681dda683052b7593df3890599fd5?placeholderIfAbsent=true&apiKey=f64b8ca6f281475cbe8b66b807b3c3ce"
+    alt="Terminal Management Overview"
+    class="object-contain gap-2.5 mt-7 w-full rounded-3xl aspect-[10.1] min-h-[150px] shadow-[0px_4px_4px_rgba(0,0,0,0.25)] max-md:max-w-full"
+  />
+  <!-- nilagay ko lang hehe -->
     <section class="w-full mt-12">
       <button (click)="openModal()" class="flex items-center justify-center px-6 py-3 bg-lime-700 text-white font-bold text-xl rounded-lg shadow-md hover:bg-lime-800 transition duration-300">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
