--- a/VSUQSM/src/app/features/desk-attendant-layout/da-contentmanagement/da-contentmanagement.component.html
+++ b/VSUQSM/src/app/features/desk-attendant-layout/da-contentmanagement/da-contentmanagement.component.html
@@ -160,7 +160,11 @@
            <div>
             <label class="inline-flex items-center cursor-pointer">
               <input type="checkbox" value="" class="sr-only peer" checked>
-              <div class="relative w-11 h-6 bg-gray-200 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-lime-900"></div>
+              <div class="relative w-11 h-6 bg-gray-200 rounded-full peer dark:bg-gray-700
+               peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full
+                peer-checked:after:border-white after:content-[''] after:absolute 
+                after:top-0.5 after:start-[2px] after:bg-white after:border-gray-300 after:border 
+                after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-lime-900"></div>
             </label>
            </div>
           </div>
@@ -168,7 +172,7 @@
           <div class="flex items-center mt-3 max-w-full text-xl rounded-xl text-zinc-400 w-[330px] bg-white border border-gray-600 border-solid">
             <input
               type="text"
-              placeholder="Video File or YouTube Playlist"
+              placeholder="Select Location"
               class="flex-grow pr-0 pl-3 py-2.5 bg-white rounded-xl focus:outline-none"
             />
             <button class="ml-2 " onclick="alert('Button is clicked!')">
